# papercraft-dungeon-generator

./: .bazelignore  .bazelrc  .gitignore  .prettierignore  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  dot  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
frontend/: BUILD.bazel  README.md  build_smoke_test.js  package.json
frontend/src/: App.test.tsx  BUILD.bazel  index.tsx
src/: BUILD.bazel  index.ts  package.json  svgdom.d.ts  tsconfig.json
tools/: pnpm
tools/format/: BUILD.bazel  README.md
