bazel_dep(name = "aspect_rules_js", version = "1.15.1")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore"
)
use_repo(npm, "npm")

bazel_dep(name = "aspect_rules_ts", version = "1.1.0")

rules_ts = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)
rules_ts.deps()
use_repo(rules_ts, "npm_typescript")
use_repo(rules_ts, "npm_google_protobuf")
use_repo(rules_ts, "npm_at_bazel_worker")
