load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        ":node_modules/@tsconfig/node-lts-strictest-esm",
    ],
)

ts_project(
    name = "src",
    srcs = glob(["*.ts"]),
    data = [
        "package.json",
    ],
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@svgdotjs/svg.js",
        ":node_modules/@types/node",
        ":node_modules/chalk",
        ":node_modules/svgdom",
    ],
)

js_binary(
    name = "bin",
    data = [
        ":src",
    ],
    entry_point = "index.js",
)
